# wavey

./: LICENSE.old  README.md  api.py  baseline_correction.py  baseline_correction_tutorial.py  config.yml  data.py  exceptions.py  pyproject.toml  setup.py  spectrum.py  tutorial.py  wavey.py
src/: baseline_correction_tutorial.py  config.yml  requirements.txt  tutorial.py  ui.py  wavey.py
src/wavey/: baseline_correction.py  data.py  exceptions.py
src/wavey.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
