[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "wavey"
version = "0.0.1"
authors = [
  { name="Alfred Worrad", email="worrada@udel.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/worradal/wavey"
"Bug Tracker" = "https://github.com/worradal/wavey/issues"